<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.contactmanager.Info"
    tools:ignore="MergeRootFrame,RtlHardcoded" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:drawableLeft="@drawable/info"
        android:drawablePadding="2dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text="@string/title_activity_info"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="italic" />

    <TableRow
        android:id="@+id/tableRowFirstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="15dp" >

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:text="@string/info"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/buttonInfoBack"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/green_round_button"
            android:drawableLeft="@drawable/back"
            android:drawablePadding="2dp"
            android:paddingLeft="35dp"
            android:paddingRight="40dp"
            android:text="@string/back"
            android:textStyle="italic" >
        </Button>
    </TableRow>

</LinearLayout>